<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <bool name="isTablet">false</bool>


<!--    <bool name="is_product_version">false</bool>
    <string name="app_id">3</string>
    <string name="sender_id">75389784733</string>
    <string name="console_id">6424d438767cdfc5d58621d98f5c0f50</string>

    <string name="app_name">MyBox</string>-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_boxs_main">BoxsMainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="all_boxs">All Boxs</string>
    <string name="your_account">Your Account</string>
    <string name="do_you_have_an_account">no account yet ?</string>
    <string name="create_account">Create an account</string>
    <string name="create_your_account">Create your account</string>
    <string name="cart">My cart</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="display_mode">Display mode</string>
    <string name="order_by">Order by</string>
    <string name="price_range">Price range</string>
    <string name="favorite_box">Favorite gift boxs</string>
    <string name="in">></string>
    <string name="more_info">" More info&#8230; "</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="inscription">Inscription</string>
    <string name="save_address">Save address</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="validate">Validate</string>
    <string name="pwd">Password</string>
    <string name="pwd_confirm">Password\nConfirmation</string>
    <string name="name">NAME</string>
    <string name="mrs">Mrs.</string>
    <string name="miss">Miss.</string>
    <string name="mr">Mr.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="coordinates">COORDINATES</string>
    <string name="address">ADDRESS</string>
    <string name="complement">Complement</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="countries">Countries</string>
    <string name="phone_number">PHONE NUMBERS</string>
    <string name="fix_phone">Landline</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="fill_field">PLEASE FILL THIS FORM :</string>
    <string name="invalide_pwd_confirmation">Invalide password confirmation</string>
    <string name="fileds_error">Inscription error</string>
    <string name="fields_msg_error">Missing fields : </string>
    <string name="email_error">Please Enter the valid email.</string>
    <string name="benificiary_msg_error_begin">"Please Enter the benificiary's "</string>
    <string name="benificiary_msg_error_end">.</string>
    <string name="pwd_error">Password Error</string>
    <string name="pwd_msg_error">Your confirmation password does not match your password.</string>
    <string name="form_error">Form error</string>
    <string name="beneficiary_title">Give this box...</string>
    <string name="who_offer_msg">WHO DO YOU WANT TO OFFER THIS BOX?</string>
    <string name="msg_to_beneficiary">WRITE A MESSAGE TO YOUR BENEFICIARY</string>
    <string name="about_screen1">%1$s</string>
    <string name="about_screen2">Discover and buy your gift boxes directly from the application.</string>
    <string name="about_screen3">2 ways to receive your gift boxes:</string>
    <string name="general_condition_sale">General conditions of sale</string>
    <string name="contact_us">Contact-us</string>
    <string name="people">%1$d people.</string>
    <string name="offer_gift">send as a gift</string>
    <string name="order">"Order"</string>
    <string name="order_btn">"Order"</string>
    <string name="validity">Availability days</string>
    <string name="quantity">Quantity</string>
    <string name="care_of">Care of %1$s %2$s</string>
    <string name="care_of_empty">Care of</string>
    <string name="change"> Modify </string>
    <string name="commande">Order #</string>
    <string name="order_commande">Order</string>
    <string name="benifits_of">For the benefit of </string>
    <string name="boxes_ordred">Boxes ordred</string>
    <string name="resend_notification">Resend notification</string>
    <string name="valid_until">Valid until</string>
    <string name="back_to_category">ALL IN %1$s</string>
    <string name="order_history">Order history</string>
    <string name="order_online">Order online</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="summary_title">ORDER RECAP :</string>
    <string name="billing_title">BILLING ADDRESS</string>
    <string name="shipping_title">SHIPPING ADDRESS</string>
    <string name="text_address">" %1$s %2$s %3$s \n %4$s • %5$s %6$s"</string>
    <string name="share">Share</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="day"> Days</string>
    <string name="order_validity">Valide %1$s</string>
    <string name="from"> from </string>
    <string name="to"> to </string>
    <string name="For">"for"</string>
    <string name="date_sale">from the purchase date.</string>
    <string name="validate_command">Validate your order</string>
    <string name="total">Total :</string>
    <string name="sender_id">sender</string>
    <string name="console_id">console_id</string>
    <string name="app_id">app_id</string>
    <string name="continue_order">"Continue"</string>
    <string name="info_order">You must login to your account or \ncreate a new one to continue.</string>
    <string name="empty_selection">Your selection is empty. Choose a gift box and add it to the selection to give to someone.</string>
    <string name="mode1_title">Need to send a gift in 5 minutes from now ?</string>
    <string name="mode2_title">"Would you rather send a physical gift box by mail ?"</string>
    <string name="mode1_desc">"The recipient will receive a digital gift voucher by email and SMS (you can personalize the gift voucher before sending it). No postage fees are due."</string>
    <string name="mode2_desc">"The recipient will receive a gift box by mail (you can personalize the gift box before it ships). Additional postage fees apply."</string>
    <string name="mode2_general_condition_sale">"Accept sale terms and conditions..."</string>
    <string name="mode2_address_hint">"No input address, press to change"</string>
    <string name="formulaire_pay">"Please fill the payment form to complete your order."</string>
    
    <string name="accept">Accept</string>
    <string name="bandeau">"MyBox gift boxes"</string>

    <string name="gift_boxes">gift boxes</string>

    <!--    <string name="name_application">"MyBox"</string>
        <string name="bandeau">"Les coffrets Cadeaux MyBox"</string>-->

<!--    <bool name="is_product_version">true</bool>
    <string name="app_id">80</string>
    <string name="sender_id">75389784733</string>
    <string name="console_id">bac4adf47eed3227550759bde6482ce5</string>

    <string name="app_name">"Lyon Plage"</string>
    <string name="bandeau">"Les coffrets Cadeaux du Spa Lyon Plage"</string>-->

</resources>