<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/createFormRecipient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CC2DA1C2"
        android:gravity="center"
        android:orientation="horizontal" >
        
               <com.paperpad.mybox.widgets.ArrowImageView
                   android:layout_width="16dp"
                   android:layout_height="16dp"
                   android:layout_gravity="center"
                   android:rotation="180"
                   android:layout_marginLeft="10dp" />
        

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/order_online"
            android:textColor="#ffffff"
            android:textSize="@dimen/btn_txt_x_small" />

        <TextView
            android:id="@+id/beneficiary_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ellipsize="marquee"
            android:gravity="center"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/validate_command"
            android:textColor="#ffffff"
            android:textSize="@dimen/label_window_small"
            android:textStyle="bold" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/validate"
            android:textColor="#ffffff"
            android:textSize="@dimen/btn_txt_x_small" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollSummary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F6FAC5" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/summary_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/summary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/summary_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical" >

                    <TableLayout
                        android:id="@+id/table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:stretchColumns="0" >
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/conditions_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/check_mark1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/checkmark_off" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/mode2_general_condition_sale"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000"
                        android:textStyle="bold" />

                    <com.paperpad.mybox.widgets.ArrowImageView
                        android:id="@+id/cgv_arrow"
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center_vertical"
                        android:padding="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/billing_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/billing_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/billing_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/billing_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/mode2_address_hint"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#88777777" />

                    <com.paperpad.mybox.widgets.ArrowImageView
                        android:id="@+id/billing_arrow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:padding="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shipping_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/shipping_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/shipping_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/shipping_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/mode2_address_hint"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#88777777" />

                    <com.paperpad.mybox.widgets.ArrowImageView
                        android:id="@+id/shipping_arrow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:padding="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>